--- a/portfolio/static/main.css
+++ b/portfolio/static/main.css
@@ -1,10 +1,21 @@
+/*
 body {
   background: #090909;
 }
+  */
+body {
+  background: #e6dede ;
+}
 
+/*
 .bg-black {
   background: #000;
 }
+  */
+.bg-black {
+  background: #f1ecec;
+}
+  
 
 .card-project:hover {
   border: 1px solid #eee;
