--- a/portfolio/templates/home.html
+++ b/portfolio/templates/home.html
@@ -4,26 +4,54 @@
 
 {% load static %}
 
+<style>
+  
+</style>
+
 <!-- Hero Section -->
-<header class="row bg-black">
-  <div class="col-md-4">
-    <img src="{% static 'portfolio/profile.jpeg' %}" />
+<div class="row">
+  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="{% static 'portfolio/1.png' %}" class="d-block w-100" alt="Slide 1">
+      </div>
+      <div class="carousel-item">
+        <img src="{% static 'portfolio/2.png' %}" class="d-block w-100" alt="Slide 2">
+      </div>
+      <div class="carousel-item">
+        <img src="{% static 'portfolio/3.png' %}" class="d-block w-100" alt="Slide 3">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+</div>
+
+
+<div class="row g-4 text-center">
+  <div class="col-6 " >
+    <img src="{% static 'portfolio/vende_mas.png' %}" class="img-fluid mx-auto d-block" />
   </div>
 
-  <div class="col-md-8 my-auto p-4">
-    <h1>I am <strong>Ryan Ray</strong></h1>
-    <h3>I'm a Python FullStack Developer</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis tempora perspiciatis molestias iusto ducimus
-      soluta mollitia ratione, fuga praesentium, reiciendis minima! Facere, veniam! Omnis, quod molestias quo fugit enim
-      vero vitae, cumque tenetur at, impedit provident dicta laudantium quia facilis consequuntur blanditiis iste
-      laborum voluptatibus libero doloribus? Pariatur voluptatem obcaecati deserunt aperiam exercitationem nam voluptas
-      rerum reprehenderit minima, earum impedit saepe eos ducimus fugit itaque a nulla omnis architecto laudantium
-      blanditiis? Eius ipsum quidem enim architecto fugiat porro inventore libero praesentium aperiam nulla
-      exercitationem nemo soluta, culpa impedit est et doloribus ut necessitatibus odit, dicta voluptate! Vero ab nulla
-      placeat.</p>
-    <a class="btn btn-primary btn-lg rounded-0 my-3" href="{% static 'portfolio/cv.pdf' %}">Download my CV</a>
+  <div class="col-6  p-4 "  >
+    <h1 class="text-center pt-5"><strong>La mejor manera de vender con tu Página de aterrizaje</strong></h1>
+    
+    <p>"Aqui puede ir algun texto relacionado a la venta"</p>
+    {% comment %} <a class="btn btn-primary btn-lg rounded-0 my-3" href="{% static 'portfolio/cv.pdf' %}">Download my CV</a> {% endcomment %}
+    <a class="btn btn-success btn-lg rounded-0 my-3 " href="https://w.app/vA0WNK">Quiero mi web</a>
   </div>
-</header>
+</div>
 
 <!-- Porfolio Section -->
 <div class="row my-4 text-center">
@@ -50,6 +78,9 @@
   </div>
   {% endfor %}
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-P1Evxj3cP5PiBTfzk5R2e4Paq2C07fTKxtJFtSk7fjSAxXaT2z7QpD96zJe7bBtK" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9ZxA4E/9g3h1BfZA9e6p5gSx0e5Ht2jvZGid3F5Dti3HgkJQj6V6jF" crossorigin="anonymous"></script>
 
 
 {% endblock %}
