--- a/portfolio/templates/layout.html
+++ b/portfolio/templates/layout.html
@@ -18,10 +18,11 @@
   {% include 'partials/navbar.html' %}
 
   <div class="container p-4">
+  
     {% block content %}
     {% endblock %}
   </div>
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
 </html>
