--- a/portfolio/templates/home.html
+++ b/portfolio/templates/home.html
@@ -40,11 +40,11 @@
 
 
 <div class="row g-4 text-center">
-  <div class="col-6 " >
+  <div class="col-6 col-md-6 " >
     <img src="{% static 'portfolio/vende_mas.png' %}" class="img-fluid mx-auto d-block" />
   </div>
 
-  <div class="col-6  p-4 "  >
+  <div class="col-6 col-md-6  p-4 "  >
     <h1 class="text-center pt-5"><strong>La mejor manera de vender con tu Página de aterrizaje</strong></h1>
     
     <p>"Aqui puede ir algun texto relacionado a la venta"</p>
