--- a/portfolio/templates/home.html
+++ b/portfolio/templates/home.html
@@ -62,7 +62,42 @@
 </style>
 
 <!-- Hero Section -->
+
 <div class="row">
+  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <!-- Indicadores dinámicos -->
+    <div class="carousel-indicators">
+      {% for image in imgHeader %}
+      <button type="button" 
+              data-bs-target="#carouselExampleIndicators" 
+              data-bs-slide-to="{{ forloop.counter0 }}" 
+              class="{% if forloop.first %}active{% endif %}" 
+              aria-current="{% if forloop.first %}true{% endif %}" 
+              aria-label="Slide {{ forloop.counter }}"></button>
+      {% endfor %}
+    </div>
+
+    <!-- Contenido dinámico del carrusel -->
+    <div class="carousel-inner">
+      {% for image in imgHeader %}
+      <div class="carousel-item {% if forloop.first %}active{% endif %}">
+        <img src="{{ image.image.url }}" class="d-block w-100" alt="Slide {{ forloop.counter }}">
+      </div>
+      {% endfor %}
+    </div>
+
+    <!-- Controles del carrusel -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+</div>
+{% comment %} <div class="row">
   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -89,7 +124,7 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-</div>
+</div> {% endcomment %}
 
 
 <div class="row g-4 text-center">
