--- a/blog/templates/dashboard.html
+++ b/blog/templates/dashboard.html
@@ -5,8 +5,9 @@
 <div class="row">
   <div class="col">
     <h1> Crear Imagen Header</h1>
-    <form id="form-header" method="post" enctype="multipart/form-data" class="bg-warning p-3  " action="{% url 'blog:imagen_header' %}">
+    <form id="form-header" method="post" enctype="multipart/form-data" class="bg-warning p-3  "  action="{% url 'blog:imagen_header' %}" >
       {% csrf_token %}
+      {{ image_header_form.as_p }}
       <p>Titulo</p>
       {{ form.title }}
       
@@ -19,13 +20,82 @@
   </div>
 
   <div class="col">
+    <h1> Crear Imagen Spot</h1>
+    <form  method="post" enctype="multipart/form-data" class="bg-warning p-3 " action="{% url 'blog:imagen_spot' %}">
+      {% csrf_token %}
+      {{ image_spot_form.as_p }}      
+      <br>
+      <button type="submit" class="btn btn-outline-success btn-sm"  >Guardar</button>
+      <a href="{% url 'home' %}" class="text-dark btn btn-outline-warning btn-sm border-secondary ">Cancelar</a>
+    </form>
+  </div>
+</div>
+
+<div class="row">
+
+  <div class="col">
+    <h1> Crear Texto Spot</h1>
+    <form  method="post" enctype="multipart/form-data" class="bg-warning p-3 " action="{% url 'blog:texto_spot' %}" >
+      {% csrf_token %}
+      {{ text_spot_form.as_p }}
+      <br>
+      <button type="submit" class="btn btn-outline-success btn-sm" >Guardar</button>
+      <a href="{% url 'home' %}" class="text-dark btn btn-outline-warning btn-sm border-secondary ">Cancelar</a>
+    </form>
+  </div>
+
+  <div class="col">
+    <h1>Seccion Uno</h1>
+    <form  method="post" enctype="multipart/form-data" class="bg-warning p-3 " action="{% url 'blog:seccion_uno' %}">
+      {% csrf_token %}
+      {{ seccion_uno_form.as_p }}
+      
+      <button type="submit" class="btn btn-outline-success btn-sm"  >Guardar</button>
+      <a href="{% url 'home' %}" class="text-dark btn btn-outline-warning btn-sm border-secondary ">Cancelar</a>
+    </form>
+  </div>
+</div>
+
+<div class="row">
+
+  <div class="col">
+    <h1> Seccion Dos</h1>
+    <form  method="post" enctype="multipart/form-data" class="bg-warning p-3 " action="{% url 'blog:seccion_dos' %}" >
+      {% csrf_token %}
+      {{ seccion_dos_form.as_p }}
+      <br>
+      <button type="submit" class="btn btn-outline-success btn-sm" >Guardar</button>
+      <a href="{% url 'home' %}" class="text-dark btn btn-outline-warning btn-sm border-secondary ">Cancelar</a>
+    </form>
+  </div>
+
+  <div class="col">
+    <h1> Subir Video</h1>
+    <form  method="post" enctype="multipart/form-data" class="bg-warning p-3 " action="{% url 'blog:video_view' %}" >
+      {% csrf_token %}
+      {{ video_form.as_p }}
+      <br>
+      <button type="submit" class="btn btn-outline-success btn-sm" >Guardar</button>
+      <a href="{% url 'home' %}" class="text-dark btn btn-outline-warning btn-sm border-secondary ">Cancelar</a>
+    </form>
+  </div>
+
+</div>
+<div class="row">
+
+  <div class="col">
     <h1>{{ view.action }} Crear Producto</h1>
     <form id="form-producto" method="post" enctype="multipart/form-data" class="bg-warning p-3 " action="{% url 'blog:crear_portafolio' %}">
       {% csrf_token %}
-      {{ form.as_p }}
+      {{ project_form.as_p }}
+      
       <button type="submit" class="btn btn-outline-success btn-sm"  id="submit-producto">Guardar</button>
       <a href="{% url 'home' %}" class="text-dark btn btn-outline-warning btn-sm border-secondary ">Cancelar</a>
     </form>
+  </div>
+
+  <div class="col">
+    
   </div>
 </div>
 
