--- a/portfolio/templates/partials/navbar.html
+++ b/portfolio/templates/partials/navbar.html
@@ -13,7 +13,7 @@
           <a class="nav-link" href="{% url 'blog:posts' %}">Posts</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'blog:crear_portafolio' %}">Dashboard</a>
+          <a class="nav-link" href="{% url 'blog:dashboard_forms' %}">Dashboard</a>
         </li>
         <li class="nav-item d-flex align-items-center">
           <a class="btn btn-primary btn-sm" href="{% static 'portfolio/cv.pdf' %}" target="_blank">Download CV</a>
