--- a/portfolio/templates/home.html
+++ b/portfolio/templates/home.html
@@ -3,6 +3,9 @@
 {% block content %}
 
 {% load static %}
+<!-- Style of the plugin -->
+<link rel="stylesheet" href="{% static 'components/Font Awesome/css/font-awesome.min.css' %}">
+<link rel="stylesheet" href="{% static 'whatsapp-chat-support.css' %}">
 
 <style>
   .cristal{
@@ -223,6 +226,51 @@
     {% endif %}
   </div>
 </div>
+
+<!-- Button Whatsapp Structure -->
+<div class="whatsapp_chat_support wcs_fixed_right" id="button-w">
+  <div class="wcs_button_label text-dark">
+          Contáctanos
+      </div>  
+  <div class="wcs_button wcs_button_circle">
+      <span class="fa fa-whatsapp"></span>
+  </div>  
+
+  <div class="wcs_popup">
+      <div class="wcs_popup_close">
+          <span class="fa fa-close"></span>
+      </div>
+      <div class="wcs_popup_header">
+          <span class="fa fa-whatsapp"></span>
+          <strong>Viví Cookies</strong>
+          
+          <div class="wcs_popup_header_description">¿Necesitas ayuda? Chatea con nosotros en Whatsapp</div>
+
+      </div>  
+      <div class="wcs_popup_input" 
+          data-number="524779198052"
+          data-availability='{ "monday":"07:00-22:30", "tuesday":"07:00-22:30", "wednesday":"07:7030-22:30", "thursday":"07:00-22:30", "friday":"07:00-22:30", "saturday":"09:00-18:30", "sunday":"09:00-22:30" }'>
+          <input type="text" placeholder="Escribir pregunta!" />
+          <i class="fa fa-play"></i>
+      </div>
+      <div class="wcs_popup_avatar">
+          <img src="https://img.freepik.com/vector-gratis/plantilla-logotipo-galletas-diseno-plano_23-2150053040.jpg" alt="">
+      </div>
+  </div>
+</div>
+
+<!-- Incluye los scripts whatsapp-->
+<script src="{% static 'components/jQuery/jquery-1.11.3.min.js' %}"></script>
+<script src="{% static 'components/moment/moment.min.js' %}"></script>
+<script src="{% static 'components/moment/moment-timezone-with-data.min.js' %}"></script>
+<script src="{% static 'whatsapp-chat-support.js' %}"></script>
+<script>
+ $('#button-w').whatsappChatSupport({
+      defaultMsg : '',
+  });
+</script>
+
+
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-P1Evxj3cP5PiBTfzk5R2e4Paq2C07fTKxtJFtSk7fjSAxXaT2z7QpD96zJe7bBtK" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9ZxA4E/9g3h1BfZA9e6p5gSx0e5Ht2jvZGid3F5Dti3HgkJQj6V6jF" crossorigin="anonymous"></script>
 
