--- a/portfolio/templates/partials/navbar.html
+++ b/portfolio/templates/partials/navbar.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-black">
   <div class="container">
-    <a class="navbar-brand fw-bold fst-italic" href="/">RR</a>
+    <a class="navbar-brand fw-bold fst-italic" href="/">ViVi cookies</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -29,7 +29,7 @@
         {% endif %}
         
         <li class="nav-item d-flex align-items-center">
-          <a class="btn btn-success btn-sm" href="{% static 'portfolio/cv.pdf' %}" target="_blank">Catálgo Productos</a>
+          <a class="btn btn-success btn-sm" href="{% static 'portfolio/cv.pdf' %}" target="_blank">Descargar Catálogo</a>
         </li>
       </ul>
     </div>
